Add the chickenpie recipe file and chicken and chicken pie images

--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -7,5 +7,35 @@
 
     <body>
         <h1>Meatballs</h1>
+
+        <img src="images/meatballs.jpeg" alt="photo of meatballs" style="width:128px;height:128px;">
+
+        <h2>Description</h2>
+        <p>I never knew how to make good meatballs until I found this recipe. I normally make mine with just ground beef and they still taste great. I've used the combination of pork, beef and veal and they are equally good. Definitely use fresh bread crumbs and freshly grate your cheese instead of using the canned variety...it really does make a difference.</p>
+
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>1 pound ground beef</li>
+            <li>1/2 pound ground veal</li>
+            <li>1/2 pound ground pork</li>
+            <li>2 cloves garlic, minced</li>
+            <li>2 eggs</li>
+            <li>1 cup freshly grated Romano cheese</li>
+            <li>1 1/2 tablespooons chopped Italian flat leaf parsley</li>
+            <li>salt and ground black pepper to taste</li>
+            <li>2 cups stale Italian bread, crumbled</li>
+            <li>1 1/2 cups lukewarm water</li>
+            <li>1 cup olive oil</li>
+        </ul>
+
+        <h2>Steps:</h2>
+        <ol>
+            <li>Combine beef, veal, and pork in a large bowl. Add garlic, eggs, cheese, parsley, salt and pepper.</li>
+
+            <li>Blend bread crumbs into meat mixture. Slowly add the water 1/2 cup at a time. The mixture should be very moist but still hold its shape if rolled into meatballs. (I usually use about 1 1/4 cups of water). Shape into meatballs.</li>
+
+            <li>Heat olive oil in a large skillet. Fry meatballs in batches. When the meatball is very brown and slightly crisp remove from the heat and drain on a paper towel. (If your mixture is too wet, cover the meatballs while they are cooking so that they hold their shape better.)</li>
+
+        </ol>        
     </body>
 </html>
