--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="meatballs.html">Meatballs</a>
+        <p><a href="recipes/meatballs.html">Meatballs</a></p>
+
     </body>
 </html>
