--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/meatballs.html">Meatballs</a></p>
+        
+        <ul>
+            <li><a href="recipes/chickenpie.html">Chicken Pot Pie</a></li>
+            <li><a href="recipes/chili.html">Chili</a></li>
+            <li><a href="recipes/meatballs.html">Meatballs</a></li>
+        </ul>
 
     </body>
 </html>
