--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -13,6 +13,31 @@
         <h2>Description</h2>
         <p>Easy recipe with little preparation time. This can also be made with ground turkey, and it tastes even better the next day!</p>
 
-        
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>1 pound lean ground beef</li>
+            <li>salt and pepper to taste</li>
+            <li>3 (15 ounce) cans dark red kidney beans</li>
+            <li>3 (14.5 ounce) cans Mexican-style stewed tomatoes</li>
+            <li>2 stalks celery, chopped</li>
+            <li>1 red bell pepper, chopped</li>
+            <li>1/4 cup red wine vinegar</li>
+            <li>2 tablespoons chili powder</li>
+            <li>1 teaspoon ground cumin</li>
+            <li>1 teaspoon dried parsley</li>
+            <li>1 teaspoon dried basil</li>
+            <li>1 dash Worcestershire sauce</li>
+            <li>1/2 cup red wine</li>
+        </ul>
+
+        <h2>Steps:</h2>
+        <ol>
+            <li>In a large skillet over medium-high heat, cook ground beef until evenly browned. Drain off grease, and season to taste with salt and pepper.</li>
+
+            <li>In a slow cooker, combine the cooked beef, kidney beans, tomatoes, celery, red bell pepper, and red wine vinegar. Season with chili powder, cumin, parsley, basil and Worcestershire sauce. Stir to distribute ingredients evenly.</li>
+
+            <li>Cook on High for 6 hours, or on Low for 8 hours. Pour in the wine during the last 2 hours.</li>
+            
+        </ol>
     </body>
 </html>
